fix copy project background color in dark mode

--- a/frontend/src/app/shared/components/forms/highlighted-input.sass
+++ b/frontend/src/app/shared/components/forms/highlighted-input.sass
@@ -7,7 +7,7 @@
   border-radius: 4px
 
   &_active
-    border: 1px solid #90cdf4
-    background: #ebf8ff
+    border: 1px solid var(--borderColor-accent-muted)
+    background-color: var(--bgColor-accent-muted)
   & .ng-select-container
     background-color: var(--body-background) !important
